# kafker

./: .gitignore  .pre-commit-config.yaml  README.md  generate_data.sh  kafker.py  pylintrc  pyproject.toml
.github/workflows/: pre_commit.yml
docker/: config.yaml  docker-compose.yaml
kafker/: __init__.py  __main__.py  app.py  kafker.py  models.py
kafker/learning/: agents.py  commands.py  models.py  views.py
kafker/markov/: agents.py  commands.py  models.py  views.py
kafker/posts/: agents.py  commands.py  models.py  views.py
kafker/users/: __init__.py  agents.py  commands.py  models.py  views.py
