[tool.poetry]
name = "kafker"
version = "0.1.0"
description = ""
authors = ["Markus Kaiser <markus.kaiser@siemens.com>"]

[tool.poetry.dependencies]
python = "^3.9"
faust = "^1.10.4"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
ipython = "^7.23.1"
isort = "^5.8.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
